[package]
name = "tychodromo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rocket_cors = { version = "0.6.0", default-features = false }
chrono = { version = "^0.4.38" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.8", features = ["json"] }
regex = "1.11.0"
dotenv = "0.15.0"
